<resources>
    <string name="app_name">Shoes Planet</string>
    <string name="list_fragment_title">List of Shoes</string>
    <string name="details_fragment_title">Shoe Details</string>
    <string name="add_fragment_title">Add New Entry</string>
    <string name="edit_fragment_title">Edit Shoe</string>
    <string name="menu_logout">Logout</string>
    <string name="desc_fab_add">Add new shoe item</string>
    <string name="fab_save">Save</string>
    <string name="fab_cancel">Cancel</string>
    <string name="fab_edit">Edit Shoe</string>
    <string name="price_icon">Price Icon</string>
    <string name="brand_icon">Brand Icon</string>
    <string name="shoe_color_icon">Shoe Color Icon</string>
    <string name="in_stock">Currently in stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in to continue</string>
    <string name="detail_image_desc">image</string>
    <string name="fav_btn_desc">image</string>
    <string name="dropdown_item">Dropdown menu item</string>
    <string name="shoe_model">Shoe Model</string>
    <string name="shoe_brand">Shoe Brand / Designer</string>
    <string name="shoe_brand_text">Jean Pierre</string>
    <string name="shoe_type">Shoe Type</string>
    <string name="shoe_type_text">Lace-Ups/Oxfords</string>
    <string name="shoe_color">Color</string>
    <string name="shoe_color_text">Black</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_size_text">40</string>
    <string name="shoe_price">Price</string>
    <string name="shoe_notes">Notes</string>
    <string name="in_stock_checkbox">In Stock</string>
    <string name="boarding_btn">Next</string>
    <string name="model_lbl">Model</string>
    <string name="brand_lbl">Brand</string>
    <string name="shoe_type_lbl">Type</string>
    <string name="shoe_price_lbl">Price</string>
    <string name="shoe_color_lbl">Color</string>
    <string name="shoe_size_lbl">Size</string>
    <string name="shoe_availability_lbl">Shoe Availability?</string>
    <string name="shoe_notes_lbl">Notes</string>
    <string name="no_data_available">No data available</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="create_account">Create an Account</string>
    <string name="no_account">Do not have an account?</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="lost_password">Lost Password?</string>
    <string name="app_logo">Logo</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="username">Name</string>
    <string name="user_avatar">User Avatar</string>
    <string name="back_icon_signup">Back icon</string>
    <string name="shoe_price_hint">10</string>
    <string name="currency_symbol">$</string>
    <string name="shoe_th">Thumbnail</string>
    <string name="slide_desc">Description</string>
    <string name="about">About</string>

    <!-- Footwear Type-->
    <string-array name="shoe_type">
        <item>Boots</item>
        <item>Exotics</item>
        <item>Extra Large Shoes</item>
        <item>Formal Shoes</item>
        <item>Lace-Ups/Oxfords</item>
        <item>Loafers and Drivers</item>
        <item>Monkstraps</item>
        <item>Sandals</item>
        <item>Sneakers</item>
        <item>Suede</item>
    </string-array>

    <!-- Brand Name -->
    <string-array name="shoe_designer">
        <item>Bacco Bucci</item>
        <item>C &amp; E Label</item>
        <item>Carrucci</item>
        <item>Coly</item>
        <item>Corrente</item>
        <item>Dogen</item>
        <item>Frye</item>
        <item>Goodoo Sneakers</item>
        <item>Jean Pierre</item>
        <item>Johnston &amp; Murphy</item>
        <item>Maurice</item>
        <item>Mezlan</item>
        <item>Pelle Exotics</item>
        <item>Toscana</item>
        <item>Ugo Vasare</item>
    </string-array>

    <!-- Color -->
    <string-array name="shoe_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Brandy</item>
        <item>Brown</item>
        <item>Burgundy</item>
        <item>Camel</item>
        <item>Cognac</item>
        <item>Dark Brown</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Jeans</item>
        <item>Mahogany</item>
        <item>Navy</item>
        <item>Sport-Rust</item>
        <item>Sport</item>
        <item>Tabaco</item>
        <item>Tan</item>
        <item>Taupe</item>
        <item>White/Camel</item>
    </string-array>

    <!-- MEN'S SHOE - EUROPEAN SIZES -->
    <!--
    https://www.candefashions.com/about/shoe-size-conversion-chart/
    -->
    <string-array name="shoe_size">
        <item>40</item>
        <item>40.5</item>
        <item>41</item>
        <item>41.5</item>
        <item>42</item>
        <item>42.5</item>
        <item>43</item>
        <item>43.5</item>
        <item>44</item>
        <item>44.5</item>
        <item>45</item>
        <item>45.5</item>
        <item>46</item>
        <item>46.5</item>
        <item>47</item>
        <item>47.5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_description">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  "</string>
</resources>