<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <!--
        Reason for using the LinearLayout
        =================================
        LinearLayout helps in aligning all child elements in a single direction, i.e.:
            1. Vertically or
            2. Horizontally.

        I am using this layout type to align all child elements vertically centered in the parent
        view using the android:orientation="vertical" attribute.

        For logical and better distribution of the sections, I am using nested LinearLayouts.

        Moreover, android:layout_marginTop="" attribute has been used to create proper gap between
        child components.
    -->
    <LinearLayout
        android:id="@+id/frag_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".onboarding.SignInFragment"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/app_logo"
                android:padding="8dp"
                android:src="@drawable/thumbnail"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="18sp"
                />


        </LinearLayout>

        <!-- Edit fields -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:orientation="vertical"
            >

            <!-- Email Address -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email_address"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="15dp"
                android:text="@string/lost_password"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <!-- androidx.appcompat.widget.AppCompatButton -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="@dimen/width_300"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/sign_in_btn"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <TextView
                android:id="@+id/btn_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/create_account"
                android:textColor="#316bff"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>
</layout>