<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <!--
        Reason for using the LinearLayout
        =================================
        LinearLayout helps in aligning all child elements in a single direction, i.e.:
            1. Vertically or
            2. Horizontally.

        I am using this layout type to align all child elements vertically centered in the parent
        view using the android:orientation="vertical" attribute.

        I am using both nested LinearLayout and RelativeLayout where it seems appropriate in this file.
        Since, RelativeLayout is helpful in displaying child views in the relative positions, that's why
        btn_back and Create an Account text have been placed inside the RelativeLayout.

        The remaining child elements have been displayed using the LinearLayout to vertical center in
        the viewport. Lastly, android:layout_marginTop="" attribute has been used to create proper gap
        between child components.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".onboarding.SignUpFragment"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/back_icon_signup"
                android:src="@drawable/ic_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                />


        </RelativeLayout>


        <ImageView
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/ic_user"
            />

        <!-- Edit fields -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:orientation="vertical"
            >

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/username"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Address -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email_address"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_300"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="@dimen/width_300"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/sign_up_btn"
            android:textSize="16sp"
            />

    </LinearLayout>
</layout>