<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.ShoeDetailFragment"
        >

        <!-- Model Name -->
        <TextView
            android:id="@+id/shoe_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Shoe Model"
            />

        <!-- Brand Name -->
        <ImageView
            android:id="@+id/ic_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/brand_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_brand_24"
            app:layout_constraintTop_toBottomOf="@id/shoe_model"
            />

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="@id/ic_brand_name"
            app:layout_constraintStart_toEndOf="@id/ic_brand_name"
            app:layout_constraintTop_toTopOf="@id/ic_brand_name"
            tools:text="Brand Name"
            />

        <View
            android:id="@+id/divider_brand_name"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_brand_name"
            />

        <!-- Price -->
        <ImageView
            android:id="@+id/ic_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/price_icon"
            android:src="@drawable/ic_price_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_brand_name"
            />

        <TextView
            android:id="@+id/shoe_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="@id/ic_price"
            app:layout_constraintStart_toEndOf="@id/ic_price"
            app:layout_constraintTop_toTopOf="@id/ic_price"
            tools:text="Price"
            />

        <View
            android:id="@+id/divider_shoe_price"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_price"
            />

        <!-- Color -->
        <ImageView
            android:id="@+id/ic_shoe_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/shoe_color_icon"
            android:src="@drawable/ic_color_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_shoe_price"
            />

        <TextView
            android:id="@+id/shoe_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="@id/ic_shoe_color"
            app:layout_constraintStart_toEndOf="@id/ic_shoe_color"
            app:layout_constraintTop_toTopOf="@id/ic_shoe_color"
            tools:text="Color"
            />

        <View
            android:id="@+id/divider_shoe_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?attr/dividerHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_shoe_color"
            />

        <!-- Size -->

        <!-- In Stock? -->

        <!-- Notes -->

        <!-- FAB: Edit -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_shoe_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_edit"
            android:src="@drawable/ic_edit_shoe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>